<resources>
    <string name="app_name">Usb Tool</string>
    <string name="app_copyright">Copyright© 2019–2020 Realsil Inc.</string>
    <string name="app_ok">OK</string>
    <string name="app_cancel">Cancel</string>

    <string name="app_tips_open_permission">Please open the required permissions</string>
    <string name="app_default_value_1">N/A</string>
    <string name="app_default_value_2">--</string>

    <string name="app_tips_level_normal">Tips</string>
    <string name="app_tips_level_warning">Warning</string>
    <string name="app_tips_level_error">Error</string>

    <string name="app_tips_exit_application">Will exit current application</string>

    <!-- Bottom Navigation Bar Text -->
    <string name="nav_bar_usb_download_patch">Patch</string>
    <string name="nav_bar_usb_debug">Debug</string>
    <string name="nav_bar_audio_debug">Audio</string>
    <string name="nav_bar_search">Search</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="nav_bar_bluetooth">Bluetooth</string>


    <!-- USB Download Patch -->
    <string name="usb_download_patch_title">USB Download Patch</string>
    <string name="usb_download_patch_output">Output: </string>
    <string name="usb_load_patch_code">Load Patch Code</string>
    <string name="usb_load_config_file">Load Config File</string>
    <string name="usb_start_download_patch">Start Download Patch</string>
    <string name="usb_connect_usb_device">Connect Usb Device</string>
    <string name="usb_read_local_version">Read Local Version</string>

    <string name="usb_error_no_patch_code_file">Please select patch code file</string>
    <string name="usb_error_no_config_file">Please select config file</string>
    <string name="usb_error_connect_usb_device">Please connect the usb device first</string>


    <!-- USB Debug -->
    <string name="usb_data_debug_title">USB Data Debug</string>

    <!-- USB Audio -->
    <string name="usb_audio_debug_title">USB Audio Debug</string>

    <!-- BLE -->
    <string name="ble_unknown_device">Unknown Device</string>
    <string name="ble_connecting">Connecting Device…</string>
    <string name="ble_filter">Filter</string>
    <string name="ble_connect">Connect</string>

    <string name="ble_tips_not_support_ble">Your phone does not support Bluetooth</string>

</resources>
