<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/usb_download_patch_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_14"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ib_save_running_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_save_log_selector"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_connect_usb_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usb_connect_usb_device"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_load_patch_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usb_load_patch_code"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_load_config_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usb_load_config_file"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_start_download_patch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usb_start_download_patch"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usb_download_patch_output"
        android:layout_marginLeft="8dip"
        android:textSize="13sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_msg_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dip"
        android:background="@android:color/black" />

</LinearLayout>